Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd1_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd1_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd1_translation-en-brahmali.json
@@ -3266,11 +3266,11 @@
   "pli-tv-kd1:79.4.58": "Topic, with the lords of death, and thirty, ",
   "pli-tv-kd1:79.4.59": "Uruvela, three dreadlocked ascetics; ",
   "pli-tv-kd1:79.4.60": "Fire hut, great kings, ",
-  "pli-tv-kd1:79.4.61": "Sakka, the supreme being, the whole. ",
+  "pli-tv-kd1:79.4.61": "Sakka, and the supreme being, the whole. ",
   "pli-tv-kd1:79.4.62": "Rag, pond, ",
-  "pli-tv-kd1:79.4.63": "Rock, arjun tree, rock; ",
+  "pli-tv-kd1:79.4.63": "And rock, arjun tree, rock; ",
   "pli-tv-kd1:79.4.64": "Rose-apple tree, and mango tree, emblic myrobalan tree, ",
-  "pli-tv-kd1:79.4.65": "He brought an orchid tree flower. ",
+  "pli-tv-kd1:79.4.65": "And he brought an orchid tree flower. ",
   "pli-tv-kd1:79.4.66": "May they split, may they be lit, ",
   "pli-tv-kd1:79.4.67": "And may they be extinguished, Kassapa; ",
   "pli-tv-kd1:79.4.68": "They immersed themselves, coal pans, cloud, ",
