Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd1_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd1_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd1_translation-en-brahmali.json
@@ -3274,7 +3274,7 @@
   "pli-tv-kd1:79.4.66": "May they split, may they be lit, ",
   "pli-tv-kd1:79.4.67": "And may they be extinguished, Kassapa; ",
   "pli-tv-kd1:79.4.68": "They immersed themselves, coal pans, cloud, ",
-  "pli-tv-kd1:79.4.69": "Gayā, and cane, of Magadha. ",
+  "pli-tv-kd1:79.4.69": "Gayā, and Cane, of Magadha. ",
   "pli-tv-kd1:79.4.70": "Upatissa and Kolita, ",
   "pli-tv-kd1:79.4.71": "And the well-known went forth; ",
   "pli-tv-kd1:79.4.72": "Shabbily dressed, dismissal, ",
