Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd1_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd1_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd1_translation-en-brahmali.json
@@ -3285,7 +3285,7 @@
   "pli-tv-kd1:79.4.77": "Ten years of formal support. ",
   "pli-tv-kd1:79.4.78": "They did not conduct themselves, to dismiss, ",
   "pli-tv-kd1:79.4.79": "The ignorant, ending, five, six; ",
-  "pli-tv-kd1:79.4.80": "He who was another, and naked, ",
+  "pli-tv-kd1:79.4.80": "He who was from another sect, and naked, ",
   "pli-tv-kd1:79.4.81": "Uncut, dreadlocked ascetic, and Sakyan. ",
   "pli-tv-kd1:79.4.82": "The five diseases in Magadha, ",
   "pli-tv-kd1:79.4.83": "And one king, finger; ",
