Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd1_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd1_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd1_translation-en-brahmali.json
@@ -3318,7 +3318,7 @@
   "pli-tv-kd1:79.4.110": "Lame, and paralysed on one side, ",
   "pli-tv-kd1:79.4.111": "Who is crippled; ",
   "pli-tv-kd1:79.4.112": "Old age, blind, mute, and deaf, ",
-  "pli-tv-kd1:79.4.113": "And what there is blind and mute. ",
+  "pli-tv-kd1:79.4.113": "And in regard to the blind and mute. ",
   "pli-tv-kd1:79.4.114": "What is called blind and deaf, ",
   "pli-tv-kd1:79.4.115": "And mute and deaf; ",
   "pli-tv-kd1:79.4.116": "And blind, mute, and deaf, ",
