--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -256,7 +256,7 @@
   "pli-tv-kd2:11.1.9": "Or they should gather wherever the most senior monk is staying. ",
   "pli-tv-kd2:11.1.10": "You should not do the observance-day ceremony with an incomplete Sangha. ",
   "pli-tv-kd2:11.1.11": "If you do, you commit an offense of wrong conduct.” ",
-  "pli-tv-kd2:12.1.0": "7. The allowance for a may-stay-apart area ",
+  "pli-tv-kd2:12.1.0": "7. The allowance for a may-stay-apart zone ",
   "pli-tv-kd2:12.1.1": "On one occasion Venerable Mahākassapa was coming from Andhakavinda to Rājagaha for the observance-day ceremony. As he was crossing a river on the way, he briefly got carried away by the current and his robes got wet. ",
   "pli-tv-kd2:12.1.2": "The monks asked him ",
   "pli-tv-kd2:12.1.3": "why his robes were wet, ",
