Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -678,7 +678,7 @@
   "pli-tv-kd2:23.2.5": "The Sangha should go to where the sick monk is and do the procedure there. ",
   "pli-tv-kd2:23.2.6": "You should not do a legal procedure with an incomplete Sangha. ",
   "pli-tv-kd2:23.2.7": "If you do, you commit an offense of wrong conduct. ",
-  "pli-tv-kd2:23.3.1": "“If, after the consent has been given to him, the monk who is conveying the consent goes away right then and there, then the consent should be given to someone else. ",
+  "pli-tv-kd2:23.3.1": "If, after the consent has been given to him, the monk who is conveying the consent goes away right then and there, then the consent should be given to someone else. ",
   "pli-tv-kd2:23.3.2": "If, after the consent has been given to him, the monk who is conveying the consent disrobes right then and there, ",
   "pli-tv-kd2:23.3.3": "dies right then and there, ",
   "pli-tv-kd2:23.3.4": "admits right then and there that he’s a novice monk, ",
