Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -1427,7 +1427,7 @@
   "pli-tv-kd2:36.3.12": "or with a hermaphrodite seated in the gathering. ",
   "pli-tv-kd2:36.3.13": "If you do, you commit an offense of wrong conduct. ",
   "pli-tv-kd2:36.4.1": "You shouldn’t do the observance-day ceremony with a passed-on purity that has expired, except if the gathering is still seated together. ",
-  "pli-tv-kd2:36.4.2": "You shouldn’t do the observance-day ceremony on a non-observance day, except for the purpose of the unity of the Sangha.” ",
+  "pli-tv-kd2:36.4.2": "You shouldn’t do the observance-day ceremony on a non-observance day, except to unify the Sangha.” ",
   "pli-tv-kd2:36.4.3": "The third section for recitation is finished. ",
   "pli-tv-kd2:36.4.4": "The second chapter on the observance day is finished. ",
   "pli-tv-kd2:36.4.5": "This is the summary: ",
