--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -1440,7 +1440,7 @@
   "pli-tv-kd2:36.4.12": "Monastery zone, large, with river, ",
   "pli-tv-kd2:36.4.13": "One after another, two, and small. ",
   "pli-tv-kd2:36.4.14": "Juniors, and just in Rājagaha, ",
-  "pli-tv-kd2:36.4.15": "May-not-stay-apart zone; ",
+  "pli-tv-kd2:36.4.15": "May-stay-apart zone; ",
   "pli-tv-kd2:36.4.16": "May establish the monastery zone first, ",
   "pli-tv-kd2:36.4.17": "May abolish the monastery zone afterwards. ",
   "pli-tv-kd2:36.4.18": "Non-established zones of inhabited areas, ",
