Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -1450,15 +1450,15 @@
   "pli-tv-kd2:36.4.22": "How many procedures, recitation, ",
   "pli-tv-kd2:36.4.23": "Primitive tribes, and even when there were none; ",
   "pli-tv-kd2:36.4.24": "A teaching, Monastic Law, they made threats, ",
-  "pli-tv-kd2:36.4.25": "Again Monastic Law, and  threatening. ",
+  "pli-tv-kd2:36.4.25": "Again Monastic Law, and threatening. ",
   "pli-tv-kd2:36.4.26": "Accusing, when permission is given, ",
   "pli-tv-kd2:36.4.27": "Objecting to what is illegitimate; ",
-  "pli-tv-kd2:36.4.28": "Four or five and others state, ",
+  "pli-tv-kd2:36.4.28": "Four or five, and others state, ",
   "pli-tv-kd2:36.4.29": "Also if deliberately, one should make an effort. ",
   "pli-tv-kd2:36.4.30": "Included lay people, without being asked, ",
   "pli-tv-kd2:36.4.31": "He did not know at Codanā; ",
   "pli-tv-kd2:36.4.32": "A number did not know, ",
-  "pli-tv-kd2:36.4.33": "And Straightaway, would not go. ",
+  "pli-tv-kd2:36.4.33": "And straightaway, would not go. ",
   "pli-tv-kd2:36.4.34": "Which, how many, faraway, ",
   "pli-tv-kd2:36.4.35": "And to announce, he forgot; ",
   "pli-tv-kd2:36.4.36": "Dirty, seat, lamp, ",
