--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -1480,7 +1480,7 @@
   "pli-tv-kd2:36.4.52": "The day after, the fifteenth, ",
   "pli-tv-kd2:36.4.53": "Characteristics, belonging to a Buddhist sect, hermaphrodite. ",
   "pli-tv-kd2:36.4.54": "That has expired, non-observance day ",
-  "pli-tv-kd2:36.4.55": "Except for the purpose of the unity of the Sangha; ",
+  "pli-tv-kd2:36.4.55": "Except to unify the Sangha; ",
   "pli-tv-kd2:36.4.56": "These summaries are detailed, ",
   "pli-tv-kd2:36.4.57": "Making the topics clear.” ",
   "pli-tv-kd2:36.4.58": "In this chapter there are eighty-six topics. ",
