--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -714,7 +714,7 @@
   "pli-tv-kd2:23.3.34": "On the observance day, if the Sangha has business to be done, then anyone passing on their purity should also give their consent.” ",
   "pli-tv-kd2:24.1.0": "22. Discussion on being seized by relatives, etc. ",
   "pli-tv-kd2:24.1.1": "On one occasion on the observance day, a certain monk was seized by his relatives. ",
-  "pli-tv-kd2:24.1.3": "“If a monk is held by his relatives on the observance day, ",
+  "pli-tv-kd2:24.1.3": "“If a monk is seized by his relatives on the observance day, ",
   "pli-tv-kd2:24.1.4": "other monks should say to those relatives, ",
   "pli-tv-kd2:24.1.5": "ʻPlease release this monk for a short time so that he can take part in the observance-day ceremony.’ ",
   "pli-tv-kd2:24.2.1": "If they’re able to do this, it’s good. ",
