Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd2_translation-en-brahmali.json
@@ -726,7 +726,7 @@
   "pli-tv-kd2:24.2.7": "If they’re able to do this, it’s good. ",
   "pli-tv-kd2:24.2.8": "If not, you should not do the observance-day ceremony with an incomplete Sangha. ",
   "pli-tv-kd2:24.2.9": "If you do, you commit an offense of wrong conduct. ",
-  "pli-tv-kd2:24.3.1": "If on the observance day a monk is held by kings, ",
+  "pli-tv-kd2:24.3.1": "If on the observance day a monk is seized by kings, ",
   "pli-tv-kd2:24.3.2": "by bandits, ",
   "pli-tv-kd2:24.3.3": "by scoundrels, ",
   "pli-tv-kd2:24.3.4": "or by enemies of the monks, other monks should say to those enemies, ",
