--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
@@ -200,7 +200,7 @@
   "pli-tv-kd4:3.5.76": "But there’s an offense of wrong conduct for the one who is conveying the invitation. ",
   "pli-tv-kd4:3.5.77": "On the invitation day, if the Sangha has business to be done, then anyone passing on their invitation should also give their consent.” ",
   "pli-tv-kd4:4.1.0": "4. Discussion on being seized by relatives, etc. ",
-  "pli-tv-kd4:4.1.1": "At one time on the invitation day a certain monk was held by his relatives. ",
+  "pli-tv-kd4:4.1.1": "At one time on the invitation day a certain monk was seized by his relatives. ",
   "pli-tv-kd4:4.1.2": "They told the Buddha. ",
   "pli-tv-kd4:4.1.3": "“If a monk is held by his relatives on the invitation day, ",
   "pli-tv-kd4:4.1.4": "other monks should say to those relatives, ",
