--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
@@ -202,7 +202,7 @@
   "pli-tv-kd4:4.1.0": "4. Discussion on being seized by relatives, etc. ",
   "pli-tv-kd4:4.1.1": "At one time on the invitation day a certain monk was seized by his relatives. ",
   "pli-tv-kd4:4.1.2": "They told the Buddha. ",
-  "pli-tv-kd4:4.1.3": "“If a monk is held by his relatives on the invitation day, ",
+  "pli-tv-kd4:4.1.3": "“If a monk is seized by his relatives on the invitation day, ",
   "pli-tv-kd4:4.1.4": "other monks should say to those relatives, ",
   "pli-tv-kd4:4.1.5": "ʻPlease release this monk for a short time so that he can take part in the invitation ceremony.’ ",
   "pli-tv-kd4:4.2.1": "If they’re able to do this, it’s good. ",
