--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
@@ -214,7 +214,7 @@
   "pli-tv-kd4:4.2.7": "If they’re able to do this, it’s good. ",
   "pli-tv-kd4:4.2.8": "If not, you should not do the invitation ceremony with an incomplete Sangha. ",
   "pli-tv-kd4:4.2.9": "If you do, you commit an offense of wrong conduct. ",
-  "pli-tv-kd4:4.3.1": "If on the invitation day a monk is held by kings, ",
+  "pli-tv-kd4:4.3.1": "If on the invitation day a monk is seized by kings, ",
   "pli-tv-kd4:4.3.2": "by bandits, ",
   "pli-tv-kd4:4.3.3": "by scoundrels, ",
   "pli-tv-kd4:4.3.4": "or by enemies of the monks, ",
