--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json
@@ -39,7 +39,7 @@
   "pli-tv-kd3:4.1.3": "“You should enter the rainy-season residence. ",
   "pli-tv-kd3:4.1.4": "If you don’t, you commit an offense of wrong conduct.” ",
   "pli-tv-kd3:4.2.1": "On the day of the entry to the rains residence, the monks from the group of six deliberately bypassed a monastery because they did not want to enter the rains residence. ",
-  "pli-tv-kd3:4.2.3": "“On the day of the entry to the rainy-season residence, you should not deliberately bypass a monastery because you don’t want to enter the rainy-season residence. ",
+  "pli-tv-kd3:4.2.3": "“On the day of the entry to the rainy-season residence, you shouldn’t deliberately bypass a monastery because you don’t want to enter the rainy-season residence. ",
   "pli-tv-kd3:4.2.4": "If you do, you commit an offense of wrong conduct.” ",
   "pli-tv-kd3:4.3.1": "At one time King Seniya Bimbisāra of Magadha wanted to postpone the rains residence. He sent a message to the monks: ",
   "pli-tv-kd3:4.3.2": "“Would the venerables please enter the rains residence at the next full moon?” ",
