Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json
@@ -54,7 +54,7 @@
   "pli-tv-kd3:5.1.6": "“Please come, Venerables, I wish to make an offering, hear the Teaching, and see the monks.” ",
   "pli-tv-kd3:5.2.1": "The monks replied, ",
   "pli-tv-kd3:5.2.2": "“The Buddha has laid down a rule ",
-  "pli-tv-kd3:5.2.3": "that a monk who’s entered the rains residence should not go wandering until after the rains. ",
+  "pli-tv-kd3:5.2.3": "that a monk who’s entered the rains residence shouldn’t go wandering until after the rains. ",
   "pli-tv-kd3:5.2.4": "Please wait, Udena. ",
   "pli-tv-kd3:5.2.5": "Once we’ve completed the rains residence, we’ll come. ",
   "pli-tv-kd3:5.2.6": "But if the matter is urgent, then give the dwelling in the presence of the local monks.” ",
