Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json
@@ -67,7 +67,7 @@
   "pli-tv-kd3:5.4.2": "“If any of seven kinds of persons—",
   "pli-tv-kd3:5.4.3": "a monk, a nun, a trainee nun, a novice monk, a novice nun, a male lay follower, or a female lay follower—",
   "pli-tv-kd3:5.4.4": "asks you to come, I allow you to go for seven days, but only if you’re asked. ",
-  "pli-tv-kd3:5.4.5": "And you should return within seven days.” ",
+  "pli-tv-kd3:5.4.5": "And you should return within seven days. ",
   "pli-tv-kd3:5.5.1": "“It may happen, monks, that a male lay follower has had a dwelling built for the Sangha ",
   "pli-tv-kd3:5.5.2": "and sends a message to the monks: ",
   "pli-tv-kd3:5.5.3": "ʻPlease come, Venerables, I wish to make an offering, hear the Teaching, and see the monks.’ You should go for seven days, but only if you’re asked. ",
