Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json
@@ -173,7 +173,7 @@
   "pli-tv-kd3:5.9.30": "or he has some duty or business and sends a message to the monks: ",
   "pli-tv-kd3:5.9.31": "ʻPlease come, I wish to make an offering, hear the Teaching, and see the monks,’ you should go for seven days, but only if you’re asked. ",
   "pli-tv-kd3:5.9.32": "And you should return within seven days. ",
-  "pli-tv-kd3:5.10.1": "“It may happen that a female lay follower has had a dwelling built for the Sangha ",
+  "pli-tv-kd3:5.10.1": "It may happen that a female lay follower has had a dwelling built for the Sangha ",
   "pli-tv-kd3:5.10.2": "and sends a message to the monks: ",
   "pli-tv-kd3:5.10.3": "ʻPlease come, I wish to make an offering, hear the Teaching, and see the monks.’ You should go for seven days, but only if you’re asked. ",
   "pli-tv-kd3:5.10.4": "And you should return within seven days. ",
