Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json
@@ -303,7 +303,7 @@
   "pli-tv-kd3:6.5.3": "ʻPlease come, Venerables, I have wrong view.’ Then, even if you’re not asked, let alone if you are, you should go for seven days, thinking, ",
   "pli-tv-kd3:6.5.4": "ʻI’ll make him give up that wrong view,’ ʻI’ll get someone to make him give up that wrong view,’ or ʻI’ll give him a teaching.’ ",
   "pli-tv-kd3:6.5.5": "But you should return within seven days. ",
-  "pli-tv-kd3:6.6.1": "“It may be that a monk who has committed a heavy offense for which he deserves to be given probation ",
+  "pli-tv-kd3:6.6.1": "It may be that a monk who has committed a heavy offense for which he deserves to be given probation ",
   "pli-tv-kd3:6.6.2": "sends a message to the monks: ",
   "pli-tv-kd3:6.6.3": "ʻPlease come, Venerables, I’ve committed a heavy offense for which I deserve to be given probation.’ Then, even if you’re not asked, let alone if you are, you should go for seven days, thinking, ",
   "pli-tv-kd3:6.6.4": "ʻI’ll make an effort to get him given probation,’ ʻI’ll do the proclamation,’ or ʻI’ll complete the quorum.’ ",
