Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json
@@ -323,7 +323,7 @@
   "pli-tv-kd3:6.9.3": "ʻPlease come, Venerables, I deserve rehabilitation.’ Then, even if you’re not asked, let alone if you are, you should go for seven days, thinking, ",
   "pli-tv-kd3:6.9.4": "ʻI’ll make an effort to get him rehabilitated,’ ʻI’ll do the proclamation,’ or ʻI’ll complete the quorum.’ ",
   "pli-tv-kd3:6.9.5": "But you should return within seven days. ",
-  "pli-tv-kd3:6.10.1": "“It may be that the Sangha wants to do a legal procedure against a monk—whether a procedure of condemnation, demotion, banishment, reconciliation, or ejection. ",
+  "pli-tv-kd3:6.10.1": "It may be that the Sangha wants to do a legal procedure against a monk—whether a procedure of condemnation, demotion, banishment, reconciliation, or ejection. ",
   "pli-tv-kd3:6.10.2": "He sends a message to the monks: ",
   "pli-tv-kd3:6.10.3": "ʻPlease come, Venerables, the Sangha wants to do a legal procedure against me.’ Then, even if you’re not asked, let alone if you are, you should go for seven days, thinking, ",
   "pli-tv-kd3:6.10.4": "ʻHow may the Sangha not do the procedure?’ or ʻHow may the Sangha make it lighter?’ ",
