--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json
@@ -369,7 +369,7 @@
   "pli-tv-kd3:6.18.3": "ʻPlease come, Venerables, I deserve rehabilitation.’ Then, even if you’re not asked, let alone if you are, you should go for seven days, thinking, ",
   "pli-tv-kd3:6.18.4": "ʻI’ll make an effort to get her rehabilitated.’ ",
   "pli-tv-kd3:6.18.5": "But you should return within seven days. ",
-  "pli-tv-kd3:6.19.1": "“It may be that the Sangha wants to do a legal procedure against a nun—",
+  "pli-tv-kd3:6.19.1": "It may be that the Sangha wants to do a legal procedure against a nun—",
   "pli-tv-kd3:6.19.2": "whether a procedure of condemnation, demotion, banishment, reconciliation, or ejection. ",
   "pli-tv-kd3:6.19.3": "She sends a message to the monks: ",
   "pli-tv-kd3:6.19.4": "ʻPlease come, Venerables, the Sangha wants to do a legal procedure against me.’ Then, even if you’re not asked, let alone if you are, you should go for seven days, thinking, ",
