--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json
@@ -353,7 +353,7 @@
   "pli-tv-kd3:6.15.2": "sends a message to the monks: ",
   "pli-tv-kd3:6.15.3": "ʻPlease come, Venerables, I have wrong view.’ Then, even if you’re not asked, let alone if you are, you should go for seven days, thinking, ",
   "pli-tv-kd3:6.15.4": "ʻI’ll make her give up that wrong view,’ ʻI’ll get someone to make her give up that wrong view,’ or ʻI’ll give her a teaching.’ ",
-  "pli-tv-kd3:6.15.5": "But you should return within seven days.”",
+  "pli-tv-kd3:6.15.5": "But you should return within seven days.",
   "pli-tv-kd3:6.16.1": "“It may be that a nun who has committed a heavy offense for which she deserves the trial period ",
   "pli-tv-kd3:6.16.2": "sends a message to the monks: ",
   "pli-tv-kd3:6.16.3": "ʻPlease come, Venerables, I deserve to be given the trial period.’ Then, even if you’re not asked, let alone if you are, you should go for seven days, thinking, ",
