Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json
@@ -400,7 +400,7 @@
   "pli-tv-kd3:6.23.3": "ʻPlease come, Venerables, I desire the full ordination.’ Then, even if you’re not asked, let alone if you are, you should go for seven days, thinking, ",
   "pli-tv-kd3:6.23.4": "ʻI’ll make an effort to get her the full ordination,’ ʻI’ll do the proclamation,’ or ʻI’ll complete the quorum.’ ",
   "pli-tv-kd3:6.23.5": "But you should return within seven days. ",
-  "pli-tv-kd3:6.24.1": "“It may be that a sick novice monk ",
+  "pli-tv-kd3:6.24.1": "It may be that a sick novice monk ",
   "pli-tv-kd3:6.24.2": "sends a message to the monks: ",
   "pli-tv-kd3:6.24.3": "ʻPlease come, Venerables, I’m sick.’ Then, even if you’re not asked, let alone if you are, you should go for seven days, thinking, ",
   "pli-tv-kd3:6.24.4": "ʻI’ll look for food for the sick,’ ʻI’ll look for food for the nurses,’ ʻI’ll look for medicine,’ ʻI’ll enquire about his sickness,’ or ʻI’ll nurse him.’ ",
