Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json
@@ -504,7 +504,7 @@
   "pli-tv-kd3:9.2.6": "who take possession of them and kill them. ",
   "pli-tv-kd3:9.2.7": "When there’s such a danger, you should leave. ",
   "pli-tv-kd3:9.2.8": "There’s no offense for breaking the rains residence. ",
-  "pli-tv-kd3:9.3.1": "“It may happen that the village where monks have entered the rains residence burns down. ",
+  "pli-tv-kd3:9.3.1": "It may happen that the village where monks have entered the rains residence burns down. ",
   "pli-tv-kd3:9.3.2": "As a consequence, they have trouble getting almsfood. ",
   "pli-tv-kd3:9.3.3": "When there’s such an obstacle, you should leave. ",
   "pli-tv-kd3:9.3.4": "There’s no offense for breaking the rains residence. ",
