Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json
@@ -539,7 +539,7 @@
   "pli-tv-kd3:11.2.4": "It may happen that monks who have entered the rains residence get enough suitable food, whether coarse or fine, as well as suitable medicines, but they don’t get a suitable attendant. ",
   "pli-tv-kd3:11.2.5": "When there’s such an obstacle, you should leave. ",
   "pli-tv-kd3:11.2.6": "There’s no offense for breaking the rains residence. ",
-  "pli-tv-kd3:11.3.1": "“It may happen that a monk who has entered the rains residence is invited by a woman: ",
+  "pli-tv-kd3:11.3.1": "It may happen that a monk who has entered the rains residence is invited by a woman: ",
   "pli-tv-kd3:11.3.2": "ʻCome, Venerable, I’ll give you money’, ʻI’ll give you gold’, ʻI’ll give you a field’, ʻI’ll give you land’, ʻI’ll give you an ox’, ʻI’ll give you a cow’, ʻI’ll give you a slave’, ʻI’ll give you my daughter as wife’, ʻI’ll be your wife’, ʻI’ll bring you another wife.’ ",
   "pli-tv-kd3:11.3.3": "If that monk thinks, ",
   "pli-tv-kd3:11.3.4": "ʻThe Buddha has said that the mind is volatile. This could be an obstacle to my monastic life,’ he should leave. ",
