Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json
@@ -572,7 +572,7 @@
   "pli-tv-kd3:11.5.9": "ʻThe Buddha has said that schism in the Sangha is a serious matter. ",
   "pli-tv-kd3:11.5.10": "I don’t want the Sangha to be divided in my presence,’ he should leave. ",
   "pli-tv-kd3:11.5.11": "There’s no offense for breaking the rains residence. ",
-  "pli-tv-kd3:11.6.1": "“It may happen that a monk who has entered the rains residence hears ",
+  "pli-tv-kd3:11.6.1": "It may happen that a monk who has entered the rains residence hears ",
   "pli-tv-kd3:11.6.2": "that a number of monks in such-and-such a monastery are pursuing schism in the Sangha. ",
   "pli-tv-kd3:11.6.3": "If he thinks, ",
   "pli-tv-kd3:11.6.4": "ʻThose monks are my friends. ",
