Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json
@@ -590,7 +590,7 @@
   "pli-tv-kd3:11.7.8": "and they will ask them not to consent to it. ",
   "pli-tv-kd3:11.7.9": "Those monks will act on what my friends say. They will listen and pay careful attention,’ then he should leave. ",
   "pli-tv-kd3:11.7.10": "There’s no offense for breaking the rains residence. ",
-  "pli-tv-kd3:11.8.1": "“It may happen that a monk who has entered the rains residence hears ",
+  "pli-tv-kd3:11.8.1": "It may happen that a monk who has entered the rains residence hears ",
   "pli-tv-kd3:11.8.2": "that a number of monks in such-and-such a monastery have caused a schism in the Sangha. ",
   "pli-tv-kd3:11.8.3": "If he thinks, ",
   "pli-tv-kd3:11.8.4": "ʻThose monks are my friends. ",
