Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json
@@ -627,7 +627,7 @@
   "pli-tv-kd3:11.11.8": "and they will ask them not to consent to it. ",
   "pli-tv-kd3:11.11.9": "Those nuns will act on what my friends say. They will listen and pay careful attention,’ then he should leave. ",
   "pli-tv-kd3:11.11.10": "There’s no offense for breaking the rains residence. ",
-  "pli-tv-kd3:11.12.1": "“It may happen that a monk who has entered the rains residence hears ",
+  "pli-tv-kd3:11.12.1": "It may happen that a monk who has entered the rains residence hears ",
   "pli-tv-kd3:11.12.2": "that a number of nuns in such-and-such a monastery have caused a schism in the Sangha. ",
   "pli-tv-kd3:11.12.3": "If he thinks, ",
   "pli-tv-kd3:11.12.4": "ʻThose nuns are my friends. ",
