--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json
@@ -659,7 +659,7 @@
   "pli-tv-kd3:12.3.1": "At one time monks entered the rains residence in the hollow of a tree. ",
   "pli-tv-kd3:12.3.2": "People complained and criticized them, ",
   "pli-tv-kd3:12.3.3": "“They’re just like goblins.” ",
-  "pli-tv-kd3:12.3.5": "“You should not enter the rains residence in the hollow of a tree. ",
+  "pli-tv-kd3:12.3.5": "“You shouldn’t enter the rains residence in the hollow of a tree. ",
   "pli-tv-kd3:12.3.6": "If you do, you commit an offense of wrong conduct.” ",
   "pli-tv-kd3:12.4.1": "At one time monks entered the rains residence in the fork of a tree. ",
   "pli-tv-kd3:12.4.2": "People complained and criticized them, ",
