Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json
@@ -663,7 +663,7 @@
   "pli-tv-kd3:12.3.6": "If you do, you commit an offense of wrong conduct.” ",
   "pli-tv-kd3:12.4.1": "At one time monks entered the rains residence in the fork of a tree. ",
   "pli-tv-kd3:12.4.2": "People complained and criticized them, ",
-  "pli-tv-kd3:12.4.3": "“They are just like deer hunters.” ",
+  "pli-tv-kd3:12.4.3": "“They’re just like deer hunters.” ",
   "pli-tv-kd3:12.4.5": "“You should not enter the rains residence in the fork of a tree. ",
   "pli-tv-kd3:12.4.6": "If you do, you commit an offense of wrong conduct.” ",
   "pli-tv-kd3:12.5.1": "At one time monks entered the rains residence out in the open. ",
