Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json
@@ -668,7 +668,7 @@
   "pli-tv-kd3:12.4.6": "If you do, you commit an offense of wrong conduct.” ",
   "pli-tv-kd3:12.5.1": "At one time monks entered the rains residence out in the open. ",
   "pli-tv-kd3:12.5.2": "When it was raining, they ran for cover under trees and eaves. ",
-  "pli-tv-kd3:12.5.4": "“You should not enter the rains residence out in the open. ",
+  "pli-tv-kd3:12.5.4": "“You shouldn’t enter the rains residence out in the open. ",
   "pli-tv-kd3:12.5.5": "If you do, you commit an offense of wrong conduct.” ",
   "pli-tv-kd3:12.6.1": "At one time monks entered the rains residence without a dwelling. ",
   "pli-tv-kd3:12.6.2": "They suffered in the cold and the heat. ",
