--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json
@@ -672,7 +672,7 @@
   "pli-tv-kd3:12.5.5": "If you do, you commit an offense of wrong conduct.” ",
   "pli-tv-kd3:12.6.1": "At one time monks entered the rains residence without a dwelling. ",
   "pli-tv-kd3:12.6.2": "They suffered in the cold and the heat. ",
-  "pli-tv-kd3:12.6.4": "“You should not enter the rains residence without a dwelling. ",
+  "pli-tv-kd3:12.6.4": "“You shouldn’t enter the rains residence without a dwelling. ",
   "pli-tv-kd3:12.6.5": "If you do, you commit an offense of wrong conduct.” ",
   "pli-tv-kd3:12.7.1": "At one time monks entered the rains residence in a charnel house. ",
   "pli-tv-kd3:12.7.2": "People complained and criticized them, ",
