Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json
@@ -677,7 +677,7 @@
   "pli-tv-kd3:12.7.1": "At one time monks entered the rains residence in a charnel house. ",
   "pli-tv-kd3:12.7.2": "People complained and criticized them, ",
   "pli-tv-kd3:12.7.3": "“They’re just like undertakers.” ",
-  "pli-tv-kd3:12.7.5": "“You should not enter the rains residence in a charnel house. ",
+  "pli-tv-kd3:12.7.5": "“You shouldn’t enter the rains residence in a charnel house. ",
   "pli-tv-kd3:12.7.6": "If you do, you commit an offense of wrong conduct.” ",
   "pli-tv-kd3:12.8.1": "At one time monks entered the rains residence under a sunshade. ",
   "pli-tv-kd3:12.8.2": "People complained and criticized them, ",
