Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json
@@ -682,7 +682,7 @@
   "pli-tv-kd3:12.8.1": "At one time monks entered the rains residence under a sunshade. ",
   "pli-tv-kd3:12.8.2": "People complained and criticized them, ",
   "pli-tv-kd3:12.8.3": "“They’re just like cowherds.” ",
-  "pli-tv-kd3:12.8.5": "“You should not enter the rains residence under a sunshade. ",
+  "pli-tv-kd3:12.8.5": "“You shouldn’t enter the rains residence under a sunshade. ",
   "pli-tv-kd3:12.8.6": "If you do, you commit an offense of wrong conduct.” ",
   "pli-tv-kd3:12.9.1": "At one time monks entered the rains residence in a large earthenware pot. ",
   "pli-tv-kd3:12.9.2": "People complained and criticized them, ",
