--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json
@@ -686,8 +686,8 @@
   "pli-tv-kd3:12.8.6": "If you do, you commit an offense of wrong conduct.” ",
   "pli-tv-kd3:12.9.1": "At one time monks entered the rains residence in a large earthenware pot. ",
   "pli-tv-kd3:12.9.2": "People complained and criticized them, ",
-  "pli-tv-kd3:12.9.3": "“They are just like the monastics of other religions.” ",
-  "pli-tv-kd3:12.9.5": "“You should not enter the rains residence in a large earthenware pot. ",
+  "pli-tv-kd3:12.9.3": "“They’re just like the monastics of other religions.” ",
+  "pli-tv-kd3:12.9.5": "“You shouldn’t enter the rains residence in a large earthenware pot. ",
   "pli-tv-kd3:12.9.6": "If you do, you commit an offense of wrong conduct.” ",
   "pli-tv-kd3:13.1.0": "11. Illegitimate agreements ",
   "pli-tv-kd3:13.1.1": "At one time the Sangha at Sāvatthī had made an agreement ",
