Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json
@@ -708,7 +708,7 @@
   "pli-tv-kd3:13.2.4": "Is there a time when the Teaching shouldn’t be practiced?” ",
   "pli-tv-kd3:13.2.5": "The monks heard Visākhā’s complaints ",
   "pli-tv-kd3:13.2.6": "and told the Buddha. ",
-  "pli-tv-kd3:13.2.7": "“You should not make an agreement ",
+  "pli-tv-kd3:13.2.7": "“You shouldn’t make an agreement ",
   "pli-tv-kd3:13.2.8": "that you won’t give the going forth during the rains residence. ",
   "pli-tv-kd3:13.2.9": "If you do, you commit an offense of wrong conduct.” ",
   "pli-tv-kd3:14.1.0": "12. An offense of wrong conduct for agreeing ",
