Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd3_translation-en-brahmali.json
@@ -807,7 +807,7 @@
   "pli-tv-kd3:14.11.14": "While on his way to that monastery, he does the observance-day ceremony outside. On the following day, he enters and prepares the dwelling, sets out water for drinking and water for washing, and sweeps the precincts. ",
   "pli-tv-kd3:14.11.15": "After staying there for two or three days, he leaves because of business. ",
   "pli-tv-kd3:14.11.16": "The second rains residence doesn’t count for that monk. And there’s an offense of wrong conduct for agreeing. ",
-  "pli-tv-kd3:14.11.17": "“It may happen that a monk agrees to spend the second rains residence in a particular monastery. ",
+  "pli-tv-kd3:14.11.17": "It may happen that a monk agrees to spend the second rains residence in a particular monastery. ",
   "pli-tv-kd3:14.11.18": "While on his way to that monastery, he does the observance-day ceremony outside. On the following day, he enters and prepares the dwelling, sets out water for drinking and water for washing, and sweeps the precincts. ",
   "pli-tv-kd3:14.11.19": "After staying there for two or three days, he leaves on seven-day business. ",
   "pli-tv-kd3:14.11.20": "But he stays away for more than seven days. ",
