--- a/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-np/pli-tv-bu-vb-np6_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-np/pli-tv-bu-vb-np6_translation-en-brahmali.json
@@ -14,7 +14,7 @@
   "pli-tv-bu-vb-np6:1.1.6": "“Venerable, please tell me what you need. ",
   "pli-tv-bu-vb-np6:1.1.7": "I can give you robe-cloth, almsfood, a dwelling, and medicines.” ",
   "pli-tv-bu-vb-np6:1.1.8": "“If you wish to give me something, give me one of your wrap garments.” ",
-  "pli-tv-bu-vb-np6:1.1.9": "“It’s shameful, Venerable, for the son of a good family to walk around in only one wrap. ",
+  "pli-tv-bu-vb-np6:1.1.9": "“It’s shameful, Venerable, for a gentleman to walk around in only one wrap. ",
   "pli-tv-bu-vb-np6:1.1.10": "Please wait until I get back home. ",
   "pli-tv-bu-vb-np6:1.1.11": "I’ll send you this wrap or a better one.” ",
   "pli-tv-bu-vb-np6:1.1.12": "A second time ",
