--- a/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-ss/pli-tv-bu-vb-ss6_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-bu-vb/pli-tv-bu-vb-ss/pli-tv-bu-vb-ss6_translation-en-brahmali.json
@@ -130,7 +130,7 @@
   "pli-tv-bu-vb-ss6:1.5.7": "And so is one who doesn’t give when asked. ",
   "pli-tv-bu-vb-ss6:1.5.8": "That’s why I do not beg from you; ",
   "pli-tv-bu-vb-ss6:1.5.9": "Please don’t hate me for this.’ ",
-  "pli-tv-bu-vb-ss6:1.5.10": "If Raṭṭhapāla, who came from a good family, could say this to his own father, ",
+  "pli-tv-bu-vb-ss6:1.5.10": "If the gentleman Raṭṭhapāla could say this to his own father, ",
   "pli-tv-bu-vb-ss6:1.5.11": "how much more can one person to another. ",
   "pli-tv-bu-vb-ss6:1.6.1": "It’s hard, monks, for householders to acquire and protect their possessions. ",
   "pli-tv-bu-vb-ss6:1.6.2": "And still, foolish men, you kept on begging and asking ",
