--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd1_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd1_translation-en-brahmali.json
@@ -217,7 +217,7 @@
   "pli-tv-kd1:6.12.3": "Listen, I’m perfected and fully awakened. I have discovered the deathless. I will instruct you and teach you the Truth. ",
   "pli-tv-kd1:6.12.4": "When you practice as instructed, ",
   "pli-tv-kd1:6.12.5": "in this very life you will soon realize with your own insight the supreme goal of the spiritual life ",
-  "pli-tv-kd1:6.12.6": "for which people from good families rightly go forth into homelessness.” ",
+  "pli-tv-kd1:6.12.6": "for which gentlemen rightly go forth into homelessness.” ",
   "pli-tv-kd1:6.13.1": "They replied, ",
   "pli-tv-kd1:6.13.2": "“Friend Gotama, by practicing extreme austerities you didn’t gain any superhuman quality, any distinction in knowledge and vision worthy of noble ones. Since you have given up your striving and returned to a life of indulgence, how could you now have achieved any of this?” ",
   "pli-tv-kd1:6.14.1": "The Buddha said, ",
