--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd1_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd1_translation-en-brahmali.json
@@ -232,7 +232,7 @@
   "pli-tv-kd1:6.16.4": "“Then listen. I’m perfected and fully awakened. I have discovered the deathless. I will instruct you and teach you the Truth. ",
   "pli-tv-kd1:6.16.5": "When you practice as instructed, ",
   "pli-tv-kd1:6.16.6": "in this very life you will soon realize with your own insight the supreme goal of the spiritual life ",
-  "pli-tv-kd1:6.16.7": "for which people from good families rightly go forth into homelessness.” ",
+  "pli-tv-kd1:6.16.7": "for which gentlemen rightly go forth into homelessness.” ",
   "pli-tv-kd1:6.16.8": "The Buddha was able to persuade the group of five monks. ",
   "pli-tv-kd1:6.16.9": "They then listened to the Buddha, paid careful attention, and applied their minds to understand. ",
   "pli-tv-kd1:6.17.1": "And the Buddha addressed them: ",
