--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd1_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd1_translation-en-brahmali.json
@@ -392,7 +392,7 @@
   "pli-tv-kd1:6.47.5": "The account of the group of five is finished. ",
   "pli-tv-kd1:6.47.6": "The first section for recitation is finished. ",
   "pli-tv-kd1:7.1.0": "7. The account of the going forth ",
-  "pli-tv-kd1:7.1.1": "At that time in Benares there was a son of a good family called Yasa, the child of a wealthy merchant, who had been brought up in great comfort. ",
+  "pli-tv-kd1:7.1.1": "At that time in Benares there was a gentleman called Yasa, the son of a wealthy merchant, who had been brought up in great comfort. ",
   "pli-tv-kd1:7.1.2": "He had three stilt houses: ",
   "pli-tv-kd1:7.1.3": "one for the winter, one for the summer, and one for the rainy season. ",
   "pli-tv-kd1:7.1.4": "While Yasa was spending the four months of the rainy season in the rainy-season house, he was attended on by female musicians, and he did not come down from that house. ",
