Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd1_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd1_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd1_translation-en-brahmali.json
@@ -1129,7 +1129,7 @@
   "pli-tv-kd1:24.4.4": "The Teaching is well-proclaimed. Practice the spiritual life to make a complete end of suffering.” ",
   "pli-tv-kd1:24.4.5": "That was the full ordination of those venerables. ",
   "pli-tv-kd1:24.5.0": "14.1 The going forth of the well-known ",
-  "pli-tv-kd1:24.5.1": "At that time many well-known Magadhans from good families were practicing the spiritual life under the Buddha. ",
+  "pli-tv-kd1:24.5.1": "At that time many well-known gentlemen from Magadha who were practicing the spiritual life under the Buddha. ",
   "pli-tv-kd1:24.5.2": "People complained and criticized him, ",
   "pli-tv-kd1:24.5.3": "“The ascetic Gotama is making us childless; he’s making us widows. He’s breaking up good families! A thousand dreadlocked ascetics have now gone forth because of him, and also these two hundred and fifty wanderers who were disciples of Sañcaya. ",
   "pli-tv-kd1:24.5.4": "All these well-known Magadhans from good families are practicing the spiritual life under the ascetic Gotama.” ",
