--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd1_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd1_translation-en-brahmali.json
@@ -1132,7 +1132,7 @@
   "pli-tv-kd1:24.5.1": "At that time many well-known gentlemen from Magadha who were practicing the spiritual life under the Buddha. ",
   "pli-tv-kd1:24.5.2": "People complained and criticized him, ",
   "pli-tv-kd1:24.5.3": "“The ascetic Gotama is making us childless; he’s making us widows. He’s breaking up good families! A thousand dreadlocked ascetics have now gone forth because of him, and also these two hundred and fifty wanderers who were disciples of Sañcaya. ",
-  "pli-tv-kd1:24.5.4": "All these well-known Magadhans from good families are practicing the spiritual life under the ascetic Gotama.” ",
+  "pli-tv-kd1:24.5.4": "All these well-known gentlemen from Magadha are practicing the spiritual life under the ascetic Gotama.” ",
   "pli-tv-kd1:24.5.5": "And when they saw monks, they confronted them with this verse: ",
   "pli-tv-kd1:24.5.6": "“The Great Ascetic has arrived ",
   "pli-tv-kd1:24.5.7": "At Giribbaja in Magadha. ",
