--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd1_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd1_translation-en-brahmali.json
@@ -2630,7 +2630,7 @@
   "pli-tv-kd1:61.1.18": "They told the Buddha. ",
   "pli-tv-kd1:61.1.19": "“A _paṇḍaka_ should not be given the full ordination. If it has been given, they should be expelled.” ",
   "pli-tv-kd1:62.1.0": "48. The one living in the community by theft ",
-  "pli-tv-kd1:62.1.1": "At one time there was a man from a good family who had been brought up in comfort, but whose entire family had died. ",
+  "pli-tv-kd1:62.1.1": "At one time there was a gentleman who had been brought up in comfort, but whose entire family had died. ",
   "pli-tv-kd1:62.1.2": "He thought, ",
   "pli-tv-kd1:62.1.3": "“I’ve been brought up in comfort and I’m incapable of making money. ",
   "pli-tv-kd1:62.1.4": "How can I live happily without exhausting myself?” ",
