--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd5_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd5_translation-en-brahmali.json
@@ -106,7 +106,7 @@
   "pli-tv-kd5:1.17.2": "“Yes, Sir.” ",
   "pli-tv-kd5:1.17.3": "Then, as a strong man might bend or stretch his arm, the Buddha disappeared from the presence of Soṇa in Cool Grove and appeared on the Vulture Peak. ",
   "pli-tv-kd5:1.18.1": "Soon Soṇa applied a balanced energy and brought about an evenness in his spiritual faculties, which is where he took up his meditation object. ",
-  "pli-tv-kd5:1.18.2": "He then stayed by himself, secluded, heedful, energetic, and diligent. In no long time in this very life, he realized with his own insight the supreme goal of the spiritual life for which people from good families rightly go forth into homelessness. ",
+  "pli-tv-kd5:1.18.2": "He then stayed by himself, secluded, heedful, energetic, and diligent. In no long time in this very life, he realized with his own insight the supreme goal of the spiritual life for which gentlemen rightly go forth into homelessness. ",
   "pli-tv-kd5:1.18.3": "He understood that birth had come to an end, that the spiritual life had been fulfilled, that the job had been done, that there was no further state of existence. ",
   "pli-tv-kd5:1.18.4": "And Venerable Soṇa became one of the perfected ones. ",
   "pli-tv-kd5:1.19.1": "He then thought, ",
