Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd5_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd5_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd5_translation-en-brahmali.json
@@ -161,7 +161,7 @@
   "pli-tv-kd5:1.27.20": "And they observe it as it disappears.” ",
   "pli-tv-kd5:1.28.0": "2. The prohibition against sandals with double-layered soles, etc. ",
   "pli-tv-kd5:1.28.1": "Then the Buddha addressed the monks: ",
-  "pli-tv-kd5:1.28.2": "“It’s in this way that someone from a good family declares perfect insight. The matter is spoken of, but the person isn’t mentioned. ",
+  "pli-tv-kd5:1.28.2": "“It’s in this way that a gentleman declares perfect insight. The matter is spoken of, but the person isn’t mentioned. ",
   "pli-tv-kd5:1.28.3": "Still some foolish men here seem to declare perfect insight just for fun. Soon enough they experience distress.” ",
   "pli-tv-kd5:1.29.1": "The Buddha then said to Soṇa, ",
   "pli-tv-kd5:1.29.2": "“Soṇa, you were brought up in great comfort. ",
