Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-kd/pli-tv-kd4_translation-en-brahmali.json
@@ -879,7 +879,7 @@
   "pli-tv-kd4:14.3.12": "or with a hermaphrodite seated in the gathering. ",
   "pli-tv-kd4:14.3.13": "If you do, you commit an offense of wrong conduct. ",
   "pli-tv-kd4:14.4.1": "You shouldn’t do the invitation ceremony with a passed-on invitation that has expired, except if the gathering is still seated together. ",
-  "pli-tv-kd4:14.4.2": "You shouldn’t do the invitation ceremony on a non-invitation day, except for the purpose of the unity of the Sangha.” ",
+  "pli-tv-kd4:14.4.2": "You shouldn’t do the invitation ceremony on a non-invitation day, except to unify the Sangha.” ",
   "pli-tv-kd4:14.4.3": "The second section for recitation is finished. ",
   "pli-tv-kd4:15.1.0": "21. Invitation ceremonies by means of two statements ",
   "pli-tv-kd4:15.1.1": "At one time on the invitation day in a certain monastery in the Kosalan country, there was a threat from primitive tribes. ",
