Translations by brahmali to translation/en/brahmali/vinaya/pli-tv-pvr/pli-tv-pvr7_translation-en-brahmali.json

--- a/translation/en/brahmali/vinaya/pli-tv-pvr/pli-tv-pvr7_translation-en-brahmali.json
+++ b/translation/en/brahmali/vinaya/pli-tv-pvr/pli-tv-pvr7_translation-en-brahmali.json
@@ -924,7 +924,7 @@
   "pli-tv-pvr7:68.9": "After reciting the introduction, the four rules entailing expulsion, the thirteen rules entailing suspension, and the two undetermined rules, the rest is announced as if heard. ",
   "pli-tv-pvr7:68.10": "In full is the fifth. ",
   "pli-tv-pvr7:68.11": "There are five other kinds of purification: ",
-  "pli-tv-pvr7:68.12": "the observance-day ceremony which consists of reciting the Monastic Code, the observance-day ceremony which consists of declaring purity, the observance-day ceremony which consists of a determination, the invitation ceremony, and the unity observance day as the fifth. ",
+  "pli-tv-pvr7:68.12": "the observance-day ceremony which consists of reciting the Monastic Code, the observance-day ceremony which consists of declaring purity, the observance-day ceremony which consists of a determination, the invitation ceremony, and the unification observance day as the fifth. ",
   "pli-tv-pvr7:68.13": "There are five benefits of being an expert on the Monastic Law: ",
   "pli-tv-pvr7:68.14": "your own morality is well guarded; you are a refuge for those who are habitually anxious; you speak with confidence in the midst of the Sangha; you can legitimately and properly refute an opponent; you are practicing for the longevity of the true Teaching. ",
   "pli-tv-pvr7:68.15": "There are five kinds of illegitimate cancellations of the Monastic Code: ",
