--- a/translation/de/site/name/sutta/ja-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/ja-name_translation-de-site.json
@@ -221,7 +221,7 @@
   "ja-name:220.ja198": "Rādha der Papagei ",
   "ja-name:221.ja199": "Der Hausbesitzer ",
   "ja-name:222.ja200": "Gut ist die Tugend ",
-  "ja-name:223.ja-natamdalhavagga": "Das ist nicht stark ",
+  "ja-name:223.ja-natamdalhavagga": "Das ist nicht fest ",
   "ja-name:224.ja201": "Das Gefängnis ",
   "ja-name:225.ja202": "Der König, der den Alten übel mitspielte ",
   "ja-name:226.ja203": "Liebe zu den Schlangenfamilien ",
