--- a/translation/de/site/name/sutta/ja-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/ja-name_translation-de-site.json
@@ -11,7 +11,7 @@
   "ja-name:10.ja8": "Prinz Gāmaṇi ",
   "ja-name:11.ja9": "König Makhadeva ",
   "ja-name:12.ja10": "Leben im Glück ",
-  "ja-name:13.ja-silavagga": "Ethik ",
+  "ja-name:13.ja-silavagga": "Das kapitel über Ethik ",
   "ja-name:14.ja11": "Die glückliche Gazelle ",
   "ja-name:15.ja12": "Die Banyan-Gazelle ",
   "ja-name:16.ja13": "Der Pfeil ",
