Translations by sabbamitta to translation/de/site/name/sutta/ja-name_translation-de-site.json

--- a/translation/de/site/name/sutta/ja-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/ja-name_translation-de-site.json
@@ -33,7 +33,7 @@
   "ja-name:32.ja28": "Der Bulle Nandivisāla ",
   "ja-name:33.ja29": "Der Bulle mit Namen der Schwarze ",
   "ja-name:34.ja30": "Das Schwein Munika ",
-  "ja-name:35.ja-kulavakavagga": "Die jungen Vögel ",
+  "ja-name:35.ja-kulavakavagga": "Das Kapitel über die jungen Vögel ",
   "ja-name:36.ja31": "Die jungen Vögel ",
   "ja-name:37.ja32": "Tanz ",
   "ja-name:38.ja33": "Gegenseitige Wertschätzung ",
