Translations by sabbamitta to translation/de/site/name/sutta/ja-name_translation-de-site.json

--- a/translation/de/site/name/sutta/ja-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/ja-name_translation-de-site.json
@@ -44,7 +44,7 @@
   "ja-name:43.ja38": "Der Kranich ",
   "ja-name:44.ja39": "Der Leibeigene Nanda ",
   "ja-name:45.ja40": "Die Grube mit Akazien-Holzkohle ",
-  "ja-name:46.ja-atthakamavagga": "Gut gemeinter Rat ",
+  "ja-name:46.ja-atthakamavagga": "Das Kapitel über gut gemeinten Rat ",
   "ja-name:47.ja41": "Über den Mönch Losaka ",
   "ja-name:48.ja42": "Die Taube ",
   "ja-name:49.ja43": "Der Mönch, der eine Giftschlange als Haustier hielt ",
