--- a/translation/de/site/name/sutta/ja-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/ja-name_translation-de-site.json
@@ -55,7 +55,7 @@
   "ja-name:54.ja48": "Der Vedabba-Zauberspruch ",
   "ja-name:55.ja49": "Glückssterne ",
   "ja-name:56.ja50": "Das Opfer von tausend Schurken ",
-  "ja-name:57.ja-asisavagga": "Mit Hoffnung weiterschuften ",
+  "ja-name:57.ja-asisavagga": "Das Kapitel über das Weiterschuften mit Hoffnung ",
   "ja-name:58.ja51": "Der große König Tugendhaft ",
   "ja-name:59.ja52": "Die kürzere Geschichte vom König Janaka ",
   "ja-name:60.ja53": "Der volle Krug ",
