Translations by sabbamitta to translation/de/site/name/sutta/ja-name_translation-de-site.json

--- a/translation/de/site/name/sutta/ja-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/ja-name_translation-de-site.json
@@ -66,7 +66,7 @@
   "ja-name:65.ja58": "Drei Eigenschaften ",
   "ja-name:66.ja59": "Der Trommler ",
   "ja-name:67.ja60": "Der Muschelhorn-Bläser ",
-  "ja-name:68.ja-itthivagga": "Frauen ",
+  "ja-name:68.ja-itthivagga": "Das Kapitel über Frauen ",
   "ja-name:69.ja61": "Der unerfreuliche Zauberspruch ",
   "ja-name:70.ja62": "Der Ehemann mit den verbundenen Augen ",
   "ja-name:71.ja63": "Der Buttermilch-Weise ",
