--- a/translation/de/site/name/sutta/ja-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/ja-name_translation-de-site.json
@@ -77,7 +77,7 @@
   "ja-name:76.ja68": "In Sāketa ",
   "ja-name:77.ja69": "Einmal ausgespienes Gift ",
   "ja-name:78.ja70": "Der Spaten-Weise ",
-  "ja-name:79.ja-varunavagga": "Der Tempelbaum ",
+  "ja-name:79.ja-varunavagga": "Das Kapitel mit dem Tempelbaum ",
   "ja-name:80.ja71": "Der Tempelbaum ",
   "ja-name:81.ja72": "Der tugendhafte Elefantenkönig ",
   "ja-name:82.ja73": "Sie schienen die Wahrheit zu kennen ",
