--- a/translation/de/site/name/sutta/ja-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/ja-name_translation-de-site.json
@@ -88,7 +88,7 @@
   "ja-name:87.ja78": "Der doppelte Illisa ",
   "ja-name:88.ja79": "Eine harte Trommel ",
   "ja-name:89.ja80": "Der Weber Bhīmasena ",
-  "ja-name:90.ja-apayimhavagga": "Wir tranken ",
+  "ja-name:90.ja-apayimhavagga": "Das Kapitel über das Trinken ",
   "ja-name:91.ja81": "Alkohol trinken ",
   "ja-name:92.ja82": "Über Mittavindaka ",
   "ja-name:93.ja83": "Pechvogel ",
