--- a/translation/de/site/name/sutta/ja-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/ja-name_translation-de-site.json
@@ -99,7 +99,7 @@
   "ja-name:98.ja88": "Der Ochse Sārambha ",
   "ja-name:99.ja89": "Der Schummler ",
   "ja-name:100.ja90": "Undankbar ",
-  "ja-name:101.ja-littavagga": "Mit Gift bestrichen ",
+  "ja-name:101.ja-littavagga": "Das Kapitel über das mit Gift Bestrichene ",
   "ja-name:102.ja91": "Mit Gift bestrichen ",
   "ja-name:103.ja92": "Der verlorene Schatz ",
   "ja-name:104.ja93": "Vertraut ",
