--- a/translation/de/site/name/sutta/ja-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/ja-name_translation-de-site.json
@@ -111,7 +111,7 @@
   "ja-name:110.ja99": "Über tausend ",
   "ja-name:111.ja100": "Die Gestalt des Schmerzes ",
   "ja-name:112.ja-parosatavagga": "8. Das Kapitel mit über Hundert ",
-  "ja-name:113.ja101": "Über hundert ",
+  "ja-name:113.ja101": "Über Hundert ",
   "ja-name:114.ja102": "Der Gärtner ",
   "ja-name:115.ja103": "Feinde ",
   "ja-name:116.ja104": "Über Mittavindaka ",
