Translations by sabbamitta to translation/de/site/name/sutta/ja-name_translation-de-site.json

--- a/translation/de/site/name/sutta/ja-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/ja-name_translation-de-site.json
@@ -121,7 +121,7 @@
   "ja-name:120.ja108": "Die Fremde ",
   "ja-name:121.ja109": "Der Kuchen ",
   "ja-name:122.ja110": "Allumfassend ",
-  "ja-name:123.ja-hamcivagga": "Der Schwan ",
+  "ja-name:123.ja-hamcivagga": "Das Kapitel mit dem Schwan ",
   "ja-name:124.ja111": "Frage nach einem Esel ",
   "ja-name:125.ja112": "Die Fragen der Amāradevī ",
   "ja-name:126.ja113": "Der Schakal ",
