--- a/translation/de/site/name/sutta/ja-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/ja-name_translation-de-site.json
@@ -132,7 +132,7 @@
   "ja-name:131.ja118": "Die Wachtel ",
   "ja-name:132.ja119": "Laut zur falschen Zeit ",
   "ja-name:133.ja120": "Von den Fesseln befreien ",
-  "ja-name:134.ja-kusanalivagga": "Der Geist im Grasbüschel ",
+  "ja-name:134.ja-kusanalivagga": "Das Kapitel mit dem Geist im Grasbüschel ",
   "ja-name:135.ja121": "Der Geist im Grasbüschel ",
   "ja-name:136.ja122": "Unverstand ",
   "ja-name:137.ja123": "Der Pflugsterz ",
