Translations by sabbamitta to translation/de/site/name/sutta/ja-name_translation-de-site.json

--- a/translation/de/site/name/sutta/ja-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/ja-name_translation-de-site.json
@@ -143,7 +143,7 @@
   "ja-name:142.ja128": "Der katzengleiche Heuchler ",
   "ja-name:143.ja129": "Bhāradvāja der Feueranbeter ",
   "ja-name:144.ja130": "Die Frau Kosiya ",
-  "ja-name:145.ja-asampadanavagga": "Das unpassende Geschenk ",
+  "ja-name:145.ja-asampadanavagga": "Das Kapitel mit dem unpassenden Geschenk ",
   "ja-name:146.ja131": "Das unpassende Geschenk ",
   "ja-name:147.ja132": "Standhaft ",
   "ja-name:148.ja133": "Wie ein Feuer, das Ghee verzehrt ",
