Translations by sabbamitta to translation/de/site/name/sutta/ja-name_translation-de-site.json

--- a/translation/de/site/name/sutta/ja-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/ja-name_translation-de-site.json
@@ -154,7 +154,7 @@
   "ja-name:153.ja138": "Die Eidechse ",
   "ja-name:154.ja139": "Doppeltes Unglück ",
   "ja-name:155.ja140": "Die Krähe ",
-  "ja-name:156.ja-kakantakavagga": "Die Echse, die sich mit einem Chamäleon anfreundete ",
+  "ja-name:156.ja-kakantakavagga": "Das Kapitel mit der Echse, die sich mit einem Chamäleon anfreundete ",
   "ja-name:157.ja141": "Die Echse, die sich mit einem Chamäleon anfreundete ",
   "ja-name:158.ja142": "Der Schakal ",
   "ja-name:159.ja143": "Der Strahlende ",
