--- a/translation/de/site/name/sutta/ja-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/ja-name_translation-de-site.json
@@ -166,7 +166,7 @@
   "ja-name:165.ja149": "Das eine giftiges Blatt ",
   "ja-name:166.ja150": "Der Brahmanenschüler Lebensbringer ",
   "ja-name:167.ja-dukanipata": "Das Zweierbuch ",
-  "ja-name:168.ja-dalhavagga": "Gewalt mit Gewalt ",
+  "ja-name:168.ja-dalhavagga": "Das Kapitel über Gewalt mit Gewalt ",
   "ja-name:169.ja151": "Rat unter Königen ",
   "ja-name:170.ja152": "Der Schakal ",
   "ja-name:171.ja153": "Das Wildschwein ",
