Translations by sabbamitta to translation/de/site/name/sutta/ja-name_translation-de-site.json

--- a/translation/de/site/name/sutta/ja-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/ja-name_translation-de-site.json
@@ -177,7 +177,7 @@
   "ja-name:176.ja158": "Die Geschichte vom Pferd Beißer ",
   "ja-name:177.ja159": "Der Pfau ",
   "ja-name:178.ja160": "Der Schwan mit Namen Graublau ",
-  "ja-name:179.ja-santhavavagga": "Bekanntschaft ",
+  "ja-name:179.ja-santhavavagga": "Das Kapitel über Bekanntschaft ",
   "ja-name:180.ja161": "Der unbelehrbare Asket Indasamānagotta ",
   "ja-name:181.ja162": "Vertrautheit ",
   "ja-name:182.ja163": "König Susīma ",
