Translations by sabbamitta to translation/de/site/name/sutta/ja-name_translation-de-site.json

--- a/translation/de/site/name/sutta/ja-name_translation-de-site.json
+++ b/translation/de/site/name/sutta/ja-name_translation-de-site.json
@@ -188,7 +188,7 @@
   "ja-name:187.ja168": "Der Habicht ",
   "ja-name:188.ja169": "Der Asket Araka ",
   "ja-name:189.ja170": "Das Chamäleon ",
-  "ja-name:190.ja-kalyanavagga": "Das Kapitel mit dem guten Ruf ",
+  "ja-name:190.ja-kalyanavagga": "Das Kapitel mit dem guten Wort ",
   "ja-name:191.ja171": "Das gute Wort ",
   "ja-name:192.ja172": "Wer macht solchen Lärm? ",
   "ja-name:193.ja173": "Der Affe ",
